data mainig - intro

--- a/cap1.tex
+++ b/cap1.tex
@@ -65,11 +65,22 @@ Um ponto importante a notar no LoL é a estrutura de preços. LoL é livre para 
 Além da Riot Games, a Valve resolveu apostar no mercado MOBA, lançando em 2013 uma nova versão do jogo Dota, o Dota2. Neste, os mesmos personagens e jogabilidades de DotA foram mantidos, porém recriados em uma plataforma dedicada e com gráficos melhorados. Outros jogos originados de DotA também ganharam forma, como o Heroes of Newerth (2010), da S2 Games, onde a jogabilidade de DotA foi reproduzida com personagens diferentes. Outros jogos de destaque na atualidade do gênero MOBA são: Smite (2014), da Hi-Rez Studios; Strife (2015), da S2 Games; e Heroes of the Storm (2015), da Blizzard.
 
 \section{Mineração de Dados}
-A mineração de dados é o estudo da coleta, limpeza, processamento, análise e obtenção de informações úteis a partir de dados. Existe uma grande variação em relação ao domínio dos problemas, aplicações, formulações e representações de dados. Portanto, "mineração de dados" é um termo abrangente que é usado para descrever diferentes aspectos do processamento de dados\cite{aggarwal2015data}.
+A mineração de dados é o estudo da coleta, preparação, processamento, análise e obtenção de informações úteis a partir de dados. Existe uma grande variação em relação ao domínio de problemas, aplicações, formulações e representações de dados. Portanto, mineração de dados é um termo abrangente que é usado para descrever diferentes aspectos do processamento de dados \cite{aggarwal2015data}.
 
-Atualmente, devido aos avanços tecnológicos e da informatização de todos os aspectos da vida moderna, praticamente todos os sistemas automatizados geram e armazenam alguma forma de dados, tanto para fins de diagnóstico como de análise. Isso resultou em um crescimento excessivamente rápido do volume de dados, que atingiu a ordem de petabytes ou exabytes \cite{aggarwal2015data}.
+Atualmente, devido aos avanços tecnológicos e da informatização de todos os aspectos da vida moderna, praticamente todos os sistemas automatizados geram ou armazenam alguma forma de dados. Isso resultou em um crescimento excessivamente rápido do volume de dados, atingindo a ordem de petabytes ou exabytes \cite{aggarwal2015data}.
 
-Esse crescimento excessivo do volume de dados vem emergindo em diversas áreas da indústria e pesquisa, como bioinformática, análise de redes sociais, visão computacional e jogos eletrônicos \cite{el2016game}.
+Esse crescimento excessivo do volume de dados vem emergindo em diversas áreas da indústria e pesquisa, como bioinformática, análise de redes sociais, visão computacional e jogos eletrônicos \cite{el2016game}. Portanto, é natural examinar se é possível extrair informações concisas e, possivelmente, acionáveis a partir dos dados disponíveis para apoiar a tomada de decisão. Para resolver este problema, os analistas usam o processo de mineração de dados, onde os dados brutos são coletados e preparados em um formato padronizado. Em seguida, os dados transformados podem ser armazenados e, finalmente, processados para extrair informações com o uso de algoritmos analíticos. Esse \textit{pipeline} de processamento é conceitualmente análogo ao de um processo de mineração real de um minério mineral para obter um produto final refinado. 
+
+Geralmente, a mineração de dados remete a noção de algoritmos analíticos, no entanto, a maior parte do processo está relacionada à preparação de dados. A fase de preparação de dados é altamente específica para cada aplicação porque os diferentes formatos de dados requerem algoritmos diferentes para serem aplicados. Essa fase pode incluir integração de dados, limpeza, extração de características e outras transformações. Em alguns casos, a seleção de características também pode ser usada para deixar os dados mais representativos.
+
+Os dados brutos podem ser arbitrários, não estruturados ou mesmo em um formato que não é imediatamente apropriado para processamento automatizado. Por exemplo, os dados coletados manualmente podem ser extraídos de fontes variadas em diferentes formatos e, de alguma forma, precisam ser processados por uma aplicação automatizada para obter informações.
+
+Existem também diferentes tipos de dados: quantitativo (por exemplo, idade), categórico (por exemplo, gênero), texto, espacial, temporal ou grafo. Embora a forma mais comum de dados seja multidimensional, uma proporção crescente pertence a tipos de dados mais complexos. Embora exista uma portabilidade conceitual de algoritmos entre muitos tipos de dados em um nível muito alto, esse não é o caso de uma perspectiva prática. A realidade é que o tipo de dados correto pode afetar significativamente o comportamento de um algoritmo particular.
+
+Do ponto de vista analítico, a mineração de dados é desafiadora devido à grande diversidade nos problemas e tipos de dados encontrados. Mesmo considerando classes relacionadas de problemas, as diferenças são bastante significativas. Por exemplo, um problema de recomendação de produtos em uma base de dados multidimensional é muito diferente de um problema de recomendação social devido às diferenças no tipo de dados subjacentes. No entanto, apesar dessas diferenças, as aplicações de mineração de dados são muitas vezes classificadas em um dos quatro principais problemas ou tarefas de mineração de dados: regras de associação, agrupamento, classificação e detecção de \textit{outliers}. Esses problemas são tão importantes porque eles são usados como blocos de implementação em uma grande variedade de cenários de aplicações. O projeto final de uma solução para um problema específico de mineração de dados depende da habilidade do analista no mapeamento da aplicação para os diferentes blocos ou na utilização de novos algoritmos para uma aplicação específica.
+
+
+
 
 Aggarwal2015data
 - The Data Mining Process
@@ -81,15 +92,6 @@ Aggarwal2015data
   - Outlier Detection
   - Data Classification
 
-O crescimento excessivo do volume de dados é resultado direto dos avanços tecnológicos e da informatização de todos os aspectos da vida moderna. Portanto, é natural examinar se é possível extrair informações concisas e, possivelmente, acionáveis a partir dos dados disponíveis para apoiar a tomada de decisão. É aí que entra a tarefa de mineração de dados. Os dados brutos podem ser arbitrários, não estruturados ou mesmo em um formato que não é imediatamente apropriado para processamento automatizado. Por exemplo, os dados coletados manualmente podem ser extraídos de fontes heterogêneas em diferentes formatos e, de alguma forma, precisam ser processados por uma aplicação de computador automatizada para obter informações úteis.
-
-Para resolver este problema, os analistas de mineração de dados usam um canal (\textit{pipeline}) de processamento, onde os dados brutos são coletados, limpos e transformados em um formato padronizado. Em seguida, os dados podem ser armazenados e, finalmente, processados para extrair informações com o uso de algoritmos analíticos. Geralmente, mineração de dados lembra a noção de algoritmos analíticos, mas a realidade é que a maior parte do processo está relacionada à preparação de dados. Esse \textit{pipeline} de processamento é conceitualmente análogo ao de um processo de mineração real, onde de um minério mineral é obtido o produto final refinado.
-
-Do ponto de vista analítico, a mineração de dados é desafiadora devido à grande diversidade nos problemas e tipos de dados encontrados. Por exemplo, um problema de recomendação de produtos comerciais é muito diferente de um de detecção de intrusão, mesmo no nível de formato de dados de entrada ou definição do problema. Mesmo considerando classes relacionadas de problemas, as diferenças são bastante significativas. Por exemplo, um problema de recomendação de produtos em uma base de dados multidimensional é muito diferente de um problema de recomendação social devido às diferenças no tipo de dados subjacentes. No entanto, apesar dessas diferenças, as aplicações de mineração de dados são muitas vezes classificadas em um dos quatro principais problemas de mineração de dados: regras de associação, agrupamento, classificação e detecção de \textit{outliers}. Esses problemas são tão importantes pois eles são usados como blocos de implementação na maioria das aplicações de alguma forma. Esta é uma abstração útil porque nos ajuda a conceituar e estruturar o campo da mineração de dados de forma mais eficaz.
-
-Os dados podem ter diferentes tipos ou formatos. O tipo pode ser quantitativo (por exemplo, idade), categórico (por exemplo, sexo), texto, espacial, temporal ou gráfico. Embora a forma mais comum de dados seja multidimensional, uma proporção crescente pertence a tipos de dados mais complexos. Embora exista uma portabilidade conceitual de algoritmos entre muitos tipos de dados em um nível muito alto, esse não é o caso de uma perspectiva prática. A realidade é que o tipo de dados correto pode afetar significativamente o comportamento de um algoritmo particular.
-
-
 
 
 
@@ -99,10 +101,6 @@ http://www.din.uem.br/ia/mineracao/tecnologia/index.html
 
 
 This chapter is organized as follows. Section 1.2 discusses the data mining process with particular attention paid to the data preprocessing phase in this section. Different data types and their formal definition are discussed in Sect. 1.3. The major problems in data mining are discussed in Sect. 1.4 at a very high level.
-
-Data mining is a complex and multistage process. These different stages are data collection, preprocessing, and analysis. The data preprocessing phase is highly application-specific because the different formats of the data require different algorithms to be applied to them. The processing phase may include data integration, cleaning, and feature extraction. In some cases, feature selection may also be used to sharpen the data representation. After the data have been converted to a convenient format, a variety of analytical algorithms can be used.
-
-A number of data mining building blocks are often used repeatedly in a wide variety of application scenarios. These correspond to the frequent pattern mining, clustering, outlier analysis, and classification problems, respectively. The final design of a solution for a particular data mining problem is dependent on the skill of the analyst in mapping the application to the different building blocks, or in using novel algorithms for a specific application. This book will introduce the fundamentals required for gaining such analytical skills.
 
 Consider a multidimensional database D with n records, and d attributes. Such a database D may be represented as an n × d matrix D, in which each row corresponds to one record and each column corresponds to a dimension. We generally refer to this matrix as the data matrix. This book will use the notation of a data matrix D, and a database D interchangeably.
 
