--- a/cap1.tex
+++ b/cap1.tex
@@ -65,22 +65,6 @@ Um ponto importante a notar no LoL é a estrutura de preços. LoL é livre para 
 Além da Riot Games, a Valve resolveu apostar no mercado MOBA, lançando em 2013 uma nova versão do jogo Dota, o Dota2. Neste, os mesmos personagens e jogabilidades de DotA foram mantidos, porém recriados em uma plataforma dedicada e com gráficos melhorados. Outros jogos originados de DotA também ganharam forma, como o Heroes of Newerth (2010), da S2 Games, onde a jogabilidade de DotA foi reproduzida com personagens diferentes. Outros jogos de destaque na atualidade do gênero MOBA são: Smite (2014), da Hi-Rez Studios; Strife (2015), da S2 Games; e Heroes of the Storm (2015), da Blizzard.
 
 \section{Mineração de Dados}
-A mineração de dados é o estudo da coleta, preparação, processamento, análise e obtenção de informações úteis a partir de dados. Existe uma grande variação em relação ao domínio de problemas, aplicações, formulações e representações de dados. Portanto, mineração de dados é um termo abrangente que é usado para descrever diferentes aspectos do processamento de dados \cite{aggarwal2015data}.
-
-Atualmente, devido aos avanços tecnológicos e da informatização de todos os aspectos da vida moderna, praticamente todos os sistemas automatizados geram ou armazenam alguma forma de dados. Isso resultou em um crescimento excessivamente rápido do volume de dados, atingindo a ordem de petabytes ou exabytes \cite{aggarwal2015data}.
-
-Esse crescimento excessivo do volume de dados vem emergindo em diversas áreas da indústria e pesquisa, como bioinformática, análise de redes sociais, visão computacional e jogos eletrônicos \cite{el2016game}. Portanto, é natural examinar se é possível extrair informações concisas e, possivelmente, acionáveis a partir dos dados disponíveis para apoiar a tomada de decisão. Para resolver este problema, os analistas usam o processo de mineração de dados, onde os dados brutos são coletados e preparados em um formato padronizado. Em seguida, os dados transformados podem ser armazenados e, finalmente, processados para extrair informações com o uso de algoritmos analíticos. Esse \textit{pipeline} de processamento é conceitualmente análogo ao de um processo de mineração real de um minério mineral para obter um produto final refinado. 
-
-Geralmente, a mineração de dados remete a noção de algoritmos analíticos, no entanto, a maior parte do processo está relacionada à preparação de dados. A fase de preparação de dados é altamente específica para cada aplicação porque os diferentes formatos de dados requerem algoritmos diferentes para serem aplicados. Essa fase pode incluir integração de dados, limpeza, extração de características e outras transformações. Em alguns casos, a seleção de características também pode ser usada para deixar os dados mais representativos.
-
-Os dados brutos podem ser arbitrários, não estruturados ou mesmo em um formato que não é imediatamente apropriado para processamento automatizado. Por exemplo, os dados coletados manualmente podem ser extraídos de fontes variadas em diferentes formatos e, de alguma forma, precisam ser processados por uma aplicação automatizada para obter informações.
-
-Existem também diferentes tipos de dados: quantitativo (por exemplo, idade), categórico (por exemplo, gênero), texto, espacial, temporal ou grafo. Embora a forma mais comum de dados seja multidimensional, uma proporção crescente pertence a tipos de dados mais complexos. Embora exista uma portabilidade conceitual de algoritmos entre muitos tipos de dados em um nível muito alto, esse não é o caso de uma perspectiva prática. A realidade é que o tipo de dados correto pode afetar significativamente o comportamento de um algoritmo particular.
-
-Do ponto de vista analítico, a mineração de dados é desafiadora devido à grande diversidade nos problemas e tipos de dados encontrados. Mesmo considerando classes relacionadas de problemas, as diferenças são bastante significativas. Por exemplo, um problema de recomendação de produtos em uma base de dados multidimensional é muito diferente de um problema de recomendação social devido às diferenças no tipo de dados subjacentes. No entanto, apesar dessas diferenças, as aplicações de mineração de dados são muitas vezes classificadas em um dos quatro principais problemas ou tarefas de mineração de dados: regras de associação, agrupamento, classificação e detecção de \textit{outliers}. Esses problemas são tão importantes porque eles são usados como blocos de implementação em uma grande variedade de cenários de aplicações. O projeto final de uma solução para um problema específico de mineração de dados depende da habilidade do analista no mapeamento da aplicação para os diferentes blocos ou na utilização de novos algoritmos para uma aplicação específica.
-
-
-
 
 Aggarwal2015data
 - The Data Mining Process
@@ -92,40 +76,44 @@ Aggarwal2015data
   - Outlier Detection
   - Data Classification
 
+A mineração de dados é o estudo da coleta, preparação, processamento, análise e obtenção de informações úteis a partir de dados. Existe uma grande variação em relação ao domínio de problemas, aplicações, formulações e representações de dados. Portanto, mineração de dados é um termo abrangente que é usado para descrever diferentes aspectos do processamento de dados \cite{aggarwal2015data}.
 
+Atualmente, devido aos avanços tecnológicos e da informatização de todos os aspectos da vida moderna, praticamente todos os sistemas automatizados geram ou armazenam alguma forma de dados. Isso resultou em um crescimento excessivamente rápido do volume de dados, atingindo a ordem de petabytes ou exabytes \cite{aggarwal2015data}.
 
+Esse crescimento excessivo do volume de dados vem emergindo em diversas áreas da indústria e pesquisa, como bioinformática, análise de redes sociais, visão computacional e jogos digitais \cite{el2016game}. Portanto, é natural examinar se é possível extrair informações concisas e, possivelmente, acionáveis a partir dos dados disponíveis para apoiar a tomada de decisões estratégicas. Há uma grande quantidade de informações escondidas em dados brutos (telemétricos) de jogos digitais, por exemplo, mas nem tudo está prontamente disponível, e alguns são difíceis de descobrir sem o conhecimento especializado (ou mesmo com ele) \cite{el2016game}. Isso fez com que dados telemétricos de muitos jogos fossem rastreados, registrados e armazenados, mas não analisados e usados. O desafio enfrentado pela indústria de jogos para tirar proveito dos dados reflete o desafio geral de trabalhar com dados em grande escala. Apenas recuperar informações de bancos de dados não é suficiente para apoiar a tomada de decisões. A revolução dos dados exigem métodos e algoritmos de análise que dimensionem tamanhos de dados massivos e permitam análises efetivas e rápidas, bem como resultados que são intuitivamente acessíveis para não especialistas.
 
+Para resolver este problema, os analistas usam o processo de mineração de dados, onde os dados brutos são coletados e preparados em um formato padronizado. Em seguida, os dados transformados podem ser armazenados e, finalmente, processados para extrair informações com o uso de algoritmos analíticos. Esse \textit{pipeline} de processamento é conceitualmente análogo ao de um processo de mineração real de um minério mineral para obter um produto final refinado.
+
+Geralmente, a mineração de dados remete a noção de algoritmos analíticos, no entanto, a maior parte do processo está relacionada à preparação de dados. A fase de preparação de dados é altamente específica para cada aplicação porque os diferentes formatos de dados requerem algoritmos diferentes para serem aplicados. Essa fase pode incluir integração de dados, limpeza, extração de características e outras transformações. Em alguns casos, a seleção de características também pode ser usada para deixar os dados mais representativos.
+
+Os dados brutos podem ser arbitrários, não estruturados ou mesmo em um formato que não é imediatamente apropriado para processamento automatizado. Por exemplo, os dados coletados manualmente podem ser extraídos de fontes variadas em diferentes formatos e, de alguma forma, precisam ser processados por uma aplicação automatizada para obter informações.
+
+Existem também diferentes tipos de dados: quantitativo (por exemplo, idade), categórico (por exemplo, gênero), texto, espacial, temporal ou grafo. Embora a forma mais comum de dados seja multidimensional, uma proporção crescente pertence a tipos de dados mais complexos. Embora exista uma portabilidade conceitual de algoritmos entre muitos tipos de dados em um nível muito alto, esse não é o caso de uma perspectiva prática. A realidade é que o tipo de dados correto pode afetar significativamente o comportamento de um algoritmo particular.
+
+Do ponto de vista analítico, a mineração de dados é desafiadora devido à grande diversidade nos problemas e tipos de dados encontrados. Mesmo considerando classes relacionadas de problemas, as diferenças são bastante significativas. Por exemplo, um problema de recomendação de produtos em uma base de dados multidimensional é muito diferente de um problema de recomendação social devido às diferenças no tipo de dados subjacentes. No entanto, apesar dessas diferenças, as aplicações de mineração de dados são muitas vezes classificadas em um dos quatro principais problemas ou tarefas de mineração de dados: regras de associação, agrupamento, classificação e detecção de \textit{outliers}. Esses problemas são tão importantes porque eles são usados como blocos de implementação em uma grande variedade de cenários de aplicações. O projeto final de uma solução para um problema específico de mineração de dados depende da habilidade do analista no mapeamento da aplicação para os diferentes blocos ou na utilização de novos algoritmos para uma aplicação específica.
+
+TODO
 A premissa básica de algoritmos de associação é achar todas as associações em que a presença de um conjunto de itens em uma transação implica em outros itens. Algoritmos de classificação ou geração de perfis desenvolvem perfis de diferentes grupos. Algoritmos de padrões seqüenciais identificam tipos de padrões seqüenciais em restrições mínimas especificadas pelo usuário. Algoritmos de agrupamento segmentam o banco de dados em subconjuntos ou grupos.
 http://www.din.uem.br/ia/mineracao/tecnologia/index.html
 
+\subsection{Dados em Jogos Digitais}
+Jogos digitais modernos variam desde aplicativos simples a sistemas de informação incrivelmente sofisticados, mas comuns para todos eles é que precisam acompanhar as ações dos jogadores e calcular uma resposta para eles. Nos últimos anos, o rastreamento e o registro dessas informações, denominadas dados telemétricos em Ciência da Computação, têm-se generalizado na insdústria de entretenimento digital, levando a uma riqueza de informações detalhadas sobre o comportamento dos jogadores.
 
+A telemetria é um dos termos fundamentais da análise de jogos, descrevendo a coleta de dados à distância. A coleta, análise e geração de informações a partir de dados telemétricos de comportamento de usuários é a base para a análise atual no desenvolvimento de jogos.
 
-This chapter is organized as follows. Section 1.2 discusses the data mining process with particular attention paid to the data preprocessing phase in this section. Different data types and their formal definition are discussed in Sect. 1.3. The major problems in data mining are discussed in Sect. 1.4 at a very high level.
+A coleta e o uso da telemetria tem uma história que remonta ao século XIX, onde os primeiros circuitos de transmissão de dados foram desenvolvidos, mas hoje o termo abrange qualquer tecnologia que permita a medição à distância. Exemplos comuns incluem transmissão de ondas de rádio a partir de um sensor remoto ou transmissão e recepção de informações através de uma rede IP.
 
-Consider a multidimensional database D with n records, and d attributes. Such a database D may be represented as an n × d matrix D, in which each row corresponds to one record and each column corresponds to a dimension. We generally refer to this matrix as the data matrix. This book will use the notation of a data matrix D, and a database D interchangeably.
+A telemetria de jogo é um termo da área de pesquisa e desenvolvimente de jogos que é usada para denotar qualquer fonte de dados obtida de uma certa distância. Existem muitos usos populares de telemetria em jogos, incluindo monitoramento remoto e análise de servidores, dispositivos móveis e comportamento de usuários. A fonte de telemetria mais importante no desenvolvimento de jogos atualmente é a telemetria do usuário, ou seja, dados sobre o comportamento dos usuários (jogadores), por exemplo, na interação com jogos, comportamento de compra, movimento físico ou interação com outros usuários ou aplicações.
 
+Dados telemétricos de um jogo podem ser pensados como unidades brutas de dados que são derivadas remotamente de algum lugar, por exemplo, um cliente de um jogo instalado enviando dados sobre como um usuário interage com o jogo ou dados de transações de um sistema \textit{online} de pagamento. Em relação aos dados de comportamento dos usuários em jogos \textit{online} para vários jogadores, por exemplo, o código embutido no cliente de um jogo transmite dados para um servidor de coleta ou coleta dados dos servidores do jogo.
 
-El2016game
+Os dados que estão sendo transmitidos seguem diferentes convenções de nomenclatura dependendo do campo de pesquisa ou domínio de aplicação ao qual as pessoas estão aplicando os dados. A essência é que a telemetria é medida em nível de atributo dos objetos. Por exemplo, a localização de um personagem do jogador enquanto navega em um ambiente virtual em determinado momento. Nesse caso, a localização é o atributo, o personagem do jogador é o objeto.
 
-p204
+Para que se trabalhe com dados telemétricos, os dados de atributos precisam ser operacionalizados, o que significa ter que decidir uma maneira de expressar esses dados. Um exemplo seria decidir se os dados de registros de localização dos personagens (ou usuários de celular) podem ser estruturados como um número que representa a soma do deslocamento em metros. A operacionalização dos dados de atributos dessa forma os transforma em variáveis ou características. O termo varia de acordo com o campo científico, no entanto, o termo característica é frequentemente usado na mineração de dados.
 
-Modern digital games range from simple applications to incredibly sophisticated information systems, but common for all of them is that need to keep track of the actions of players and calculate a response to them. In recent years, the tracking and logging of this information, as well as data on technical performance of the game engines and applications themselves, has become widespread in the digital entertainment industry, leading to a wealth of incredibly detailed information about the behavior of – in the case of major commercial titles – millions of players and installed clients.
+Dados brutos telemétricos podem ser armazenados em vários formatos de banco de dados e estruturados de forma a tornar possível a transformação dos dados em várias medidas interpretativas, como tempo médio de duração de jogo, receita por dia, número de usuários ativos por dia, e assim por diante. Essas medidas são chamadas de métricas de jogo. As métricas de jogo são, em essência, medidas interpretativas de algo e podem apresentar vantagens potenciais, como suporte à tomada de decisões estratégicas. Métricas podem ser características e vice-versa, ou agregados mais complexos ou valores calculados como a soma de múltiplas características. Para exemplicicar: dados telemétricos de um atirador em um jogo de tiro podem incluir dados sobre a localização do personagem do jogador no ambiente virtual, as armas usadas e informações sobre se cada tiro atinge ou erra um alvo, dentre outros. Esses dados de atributos podem ser convertidos em características, como número de acertos ou número de erros em um domínio de 0:1000, sendo 1000 o maior número de acertos efetuados em um mapa específico. Por sua vez, essas características básicas podem ser usadas para uma análise simples, como o cálculo da taxa de acerto/erro em cada mapa do jogo. Uma alternativa é usar características como identificação do jogador, duração da partida e pontos marcados para calcular a métrica pontos marcados por minuto para cada jogador.
 
-
-There is a wealth of information hidden in good game telemetry data, but not all of it is readily available, and some very hard to discover without the proper expert knowledge (or even with it). This has led to much game telemetry data being tracked, logged and stored, but not analyzed and employed. The challenge faced by the game industry to take advantage of game telemetry data mirrors the general challenge of working with large-scale data. Simply retrieving information from databases – irrespective of the field of application – is not enough to guide decision-making. Instead, new methods have emerged to assist analysts and decision makers to obtain the information they need to make better decisions. These include: automatic summarization of data, the extraction of the essence of the stored information, and the discovery of patterns in raw data. When datasets become very large (we consider any dataset that does not fit into the memory of a high-end PC as large-scale, i.e. several
-GB and beyond) and complex, many traditional methodologies and algorithms used on smaller datasets break down. In fact, any algorithm that scales quadratically with the number of samples is not feasible to use on large data. Instead, methods designed for large datasets must be employed. These methods are collectively referred to as data mining . Data revolutions call for novel analysis methods that scale to massive data sizes and allow for effective, rapid analysis, as well as results that are intuitively accessible to non-experts (Han et al. 2005 ; Larose 2004).
-
-On a practical note, the first half of this chapter (Sects. 12.1 and 12.2 ) is written for the general audience and does not require previous knowledge of data mining. The second half (Sects. 12.3 and 12.4 ), which focus on case examples of different data mining methods, use however data mining terminology, includes some use of formulas, and some sub-sections may require knowledge of statistics and dimensionality reduction methods. Section 12.5 takes a specific look at online games, including Free-to-Play (F2P), as these have received particular attention with respect to data mining.
-
-\section{Game Telemetry}
-
-p17
-
-Game telemetry is the term we use to denote any source of raw units of data obtained over distance, which pertain to game development or game research. There are many popular applications of telemetry in games, including remote monitoring and analysis of game servers, mobile devices, user behavior and production. The source of user telemetry is data on the behavior of users (players), for example on their interaction with games, purchasing behavior, physical movement, or their interaction with other users. In user behavior data, code embedded in the game client transmits data to a collection server; or the data is collected from game servers (as used in e.g. online multi-player games).
-
-In order to work with telemetry data, the attribute data needs to be operationalized, which means having to decide a way to express the attribute data. For example, deciding that the locational data tracked from player characters should be organized as a number describing the sum of movement in meters. Operationalizing attribute data in this way turns them into variables or features – the term varies depending on the scientific field. In Experimental Psychology the term variable is usually used, and thus this is the term that is generally seen in articles and conference presentations on telemetry used in game user research. In Computer Science the term feature is often used, and thus this is the term used in data mining articles. This is just a general guideline – naming conventions vary considerably because game analytics is not a domain with established standards, so care must be taken when consulting the literature on game analytics (such as it is). Finally, variables/features have a specific domain. The domain is the set of all possible values – defining the domain is essentially what operationalizing attribute data is all about. For example, a binary domain allows only two values (e.g. 0 or 1).
-
-Raw telemetry data can be stored in various database formats (see Chaps. 6 , 7 or 12), which are ordered in such a way that makes it possible to transform the data into various interpretable measures, such as average completion time as a function of individual game levels, average weekly bug fix rate, revenue per day, number of daily active users, and so forth (see Chaps. 4 and 12). These are called game metrics. Game metrics are, in essence, interpretable measures of something. They present the same potential advantages as other sources of BI, i.e. support for decision-making in companies. Metrics can be variables/features and vice versa, or more complex aggregates or calculated values, for example the sum of multiple variables/features. To take an example: telemetry data from a shooter like Quake could include data on the location of the player avatar in the virtual environment, the weapons used, and information on whether every shot hits or misses, etc. These are different attributes, and they can be converted into variables/features such as “number of hits” or “number of misses” with a domain from 0 to 1,000 (with 1,000 being the biggest number of hits scored for a specific level). In turn, these simple variables/features can form the basis for analysis, e.g. calculating the hit/miss ratio for each level or map in Quake (e.g. “hit/miss ratio is 1.2 on average for the “Albatross” map”). An alternative is to use the variables/features “playerID”, “session length” and “points scored” to calculate the metric “points scored per minute” for each player. These kinds of measures, which are based on calculations involving several variables/features, are usually referred to as game metrics. However, here is no standard terminology widely accepted in game analytics, so be prepared for variations.
+\subsection{Processo de Mineração de Dados}
 
 \subsection{Aprendizado supervisionado}
 \subsection{Aprendizado não supervisionado}
@@ -218,6 +206,10 @@ Coletamos aleatoriamente da API 110.000 históricos de partidas a partir de feve
 \end{itemize}
 
 \section{Extração de Características}
+
+TODO
+Consider a multidimensional database D with n records, and d attributes. Such a database D may be represented as an n × d matrix D, in which each row corresponds to one record and each column corresponds to a dimension. We generally refer to this matrix as the data matrix. This book will use the notation of a data matrix D, and a database D interchangeably.
+
 
 Em seguida, extraímos características das partidas coletadas para modelar nosso conjunto de dados de desempenho de equipes. Seja $M=\{m_1,...,m_{110000}\}$ um conjunto de histórico de partidas, $T=\{t_1, ..., t_n | n=110000 * 2=220000\}$ um conjunto de equipes, $P=\{p_1, ..., p_{|P|}\}$ um conjunto dimensional $d=38$ de estatísticas sumarizadas do desempenho total dos jogadores nas partidas. Uma partida consiste de duas equipes distintas $m=\{t_a,t_b\}$ e uma equipe é composta pelo desempenho de 5 jogadores distintos $t=\{p_k |  p_k \in P^t; P^t \supset P; 1 \geq k \leq 5\}$. Selecionamos as estatísticas de desempenho dos jogadores nas partidas e somamos cada estatística $P_j \in P$ por equipe para formar cada característica (ou estatística) $X_j \in X_{220000, 38}$ do nosso conjunto de desempenho de equipes, de modo que $X = \{ x_{i} = \sum_{k=1}^{5} p_{k}^{i} | t_{i} \in T; p_{k}^{i} \in P \}$.
 
