--- a/abstract.tex
+++ b/abstract.tex
@@ -1,4 +1,1 @@
-Abstract Here
-
-
-
+Despite the increasing popularity of electronic sports (eSports), there is still a scarcity of academic works exploring the playing behavior of teams. Understanding the features that help to discriminate between successful and unsuccessful teams would help teams improving their strategies, such as determine performance metrics to reach. In this dissertation, we identify and characterize team behavior patterns based on historical match data from League of Legends, a very popular eSport. By applying methods from data mining, such as machine learning and statistical analysis, we clustered teams' performance and investigate for each cluster how and to what extent these features have an influence on teams'  success and in success. The results of our study imply that some clusters are more likely to win than others and influence of the features are distinct for each one, which allowed us to model performance metrics of successful and unsuccessful team profiles. At all, we found 7 clusters or profiles in which were classified into four levels in terms of win rate: very low, moderate, high and very high.
