--- a/ref.bib
+++ b/ref.bib
@@ -1,3 +1,23 @@
+@article{sathya2013comparison,
+  title={Comparison of supervised and unsupervised learning algorithms for pattern classification},
+  author={Sathya, R and Abraham, Annamma},
+  journal={International Journal of Advanced Research in Artificial Intelligence},
+  volume={2},
+  number={2},
+  pages={34--38},
+  year={2013}
+}
+
+@article{lorena2007introduccao,
+  title={Uma introdu{\c{c}}{\~a}o {\`a}s support vector machines},
+  author={Lorena, Ana Carolina and de Carvalho, Andr{\'e} CPLF},
+  journal={Revista de Inform{\'a}tica Te{\'o}rica e Aplicada},
+  volume={14},
+  number={2},
+  pages={43--67},
+  year={2007}
+}
+
 @book{aggarwal2015data,
   title={Data mining: the textbook},
   author={Aggarwal, Charu C},
