improve text logic

--- a/agradecimentos.tex
+++ b/agradecimentos.tex
@@ -1,1 +1,10 @@
-Agradecimentos
+Agradeço à minha querida esposa, Taisa, e minha amável filha, Rebeca, por serem tão importantes na minha vida. Que por vezes ficaram bravas porque eu não queria parar para lhes dar atenção enquanto estudava. Obrigado por permanecerem comigo diante de tantas dificuldades de saúde que aconteceram comigo em paralelo ao mestrado. Essa vitória também é de vocês. Obrigado por tudo.
+
+Agradeço ao meu pai. Por ser meu referencial como pessoa, pelo apoio incondicional e por sempre acreditar em mim.
+
+Agradeço aos meus colegas de laboratório e de trabalho pelo companheirismo e amizade que tiveram comigo.
+
+Agradeço ao Professor Leandro Balby Marinho pela excelente orientação e dedicação ao longo desses 2 anos e meio de mestrado. Obrigado pela paciência, confiança, conselhos e todo o conhecimento que me transferiu ao longo dos estudos.
+
+Obrigado aos funcionários do PPGCC e a CAPES. Obrigado a todos que diretamente ou indiretamente contribuíram para o sucesso deste trabalho!
+
