--- a/dedicatoria.tex
+++ b/dedicatoria.tex
@@ -1,7 +1,3 @@
-\vspace*{\fill}
-  \begin{center}
-  	\centering
-    \noindent
-    \textit{Dedicatória} 
-  \end{center}
 
+\centerline{\textit{Dedico essa dissertação a todas as pessoas que tiveram seus sonhos interrompidos.}}
+\centerline{\textit{Tenham foco, sigam em frente e não desistam dos seus sonhos.}}
