--- a/main_mestrado.tex
+++ b/main_mestrado.tex
@@ -81,8 +81,17 @@ showstringspaces=false
 \cleardoublepage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\mbox{}
+\thispagestyle{empty}
+\newpage
 
+% \input{dedicatoria.tex}
+% \newpage
+% \cleardoublepage
+
+\begin{dedicatoria}
 \input{dedicatoria.tex}
+\end{dedicatoria}
 \newpage
 \cleardoublepage
 
