--- a/mestre.sty
+++ b/mestre.sty
@@ -6,7 +6,7 @@
 \def\dedicatoria{%
 \setcounter{page}{3}
 \newpage\thispagestyle{plain}\null\vfil
-\centerline{\Large\bfseries Dedicat\'{o}ria}\par\medskip\noindent}
+\centerline{\Large\bfseries { }}\par\medskip\noindent}
 \def\enddedicatoria{\par\vfil\null}
 
 %
