--- a/simbolos.tex
+++ b/simbolos.tex
@@ -1,2 +1,11 @@
-UE		- \textit{Um Exemplo}\\
-OE		- \textit{Outro Exemplo}\\
+API - \textit{Application Programming Interface}\\
+CRISP-DM - \textit{Cross-Industry Standard Process for Data Mining}\\
+IA -  \textit{Inteligência artificial}\\
+LOL - \textit{League of Legends}\\
+MOBA - \textit{Multiplayer Online Battle Arena}\\
+PCA - \textit{principal component analysis}\\
+RTS - \textit{Realtime Strategy }\\
+SQE - \textit{Soma dos Quadrados do Erro}\\
+SQED - \textit{Soma dos Quadrados do Erro Dentro dos Grupos}\\
+SQEE - \textit{Soma dos Quadrados do Erro Entre os Grupos}\\
+SQET - \textit{Soma dos Quadrados do Erro Total}\\
