simple review - intro

--- a/cap1.tex
+++ b/cap1.tex
@@ -6,16 +6,16 @@ Um segmento de jogo muito popular atualmente é o esporte eletrônico, mais conh
 
 LoL é um jogo de arena de batalha \textit{online} para vários jogadores (\textit{Multiplayer Online Battle Arena} - MOBA), um subgênero de jogos digitais de estratégia em tempo real (\textit{Real-time Strategy} - RTS). Uma partida em um MOBA consiste em um cenário (mapa) em que duas equipes lutam entre si, a fim de destruir a base do oponente como o principal objetivo, sem limite de tempo. Um mapa simples contém três estradas principais (rotas) que conectam a base de cada equipe. Em geral, uma equipe tem cinco jogadores e cada um seleciona e controla um personagem, conhecidos como campeões ou heróis, com atributos e habilidades distintas. Além disso, as equipes também contam com a assistência de estruturas de defesa e unidades controladas por Inteligência Artificial (IA), conhecidos como \textit{minions} ou \textit{creeps}, para vencer a partida. Ao longo de uma partida, os personagens ganham ouro - que é usado para comprar itens que melhoraram seus atributos e habilidades - e pontos de experiência de várias maneiras, como matar unidades ou personagens e destruir estruturas da equipe inimiga \cite{league1}.
 
-A grande diversidade e dinamicidade das ações dos personagens nas partidas \cite{drachen2014skill}, bem como seus desempenhos individuais (ou seja, ouro ganho, campeões derrotados, dano causado, cura recebida, etc.), tornam os MOBAs jogos muito competitivos. Em LoL, esta competitividade é ampliada devido à sua popularidade e torneios que fazem com que muitos jogadores se comportem como desportistas profissionais \cite{rioult2014mining}.
+A grande diversidade e dinamicidade das ações dos personagens nas partidas \cite{drachen2014skill}, bem como seus desempenhos individuais (ou seja, ouro ganho, campeões abatidos ou derrotados, dano causado, cura recebida, etc.), tornam os MOBAs jogos muito competitivos. Em LoL, esta competitividade é ampliada devido à sua popularidade e torneios que fazem com que muitos jogadores se comportem como desportistas profissionais \cite{rioult2014mining}.
 
-Dominar LoL é muito desafiador e requer um investimento substancial de tempo \cite{drachen2014skill}, principalmente para equipes inexperientes que não sabem inicialmente como elaborar ou melhorar sua estratégia. Nesse sentido, uma alternativa que poderia ajudar essas equipes é fornecer informações que levem a melhores decisões estratégicas no jogo, como por exemplo, métricas de desempenho baseadas no comportamento de equipes bem-sucedidas. Uma das abordagens para o criação de métricas de desempenho é o uso da mineração de dados \cite{el2016game}, que explora o estudo da coleta, preparação, processamento, análise e obtenção de informações úteis a partir de dados para apoiar a tomada de decisões \cite{aggarwal2015data}.
+Dominar LoL é muito desafiador e requer um investimento substancial de tempo \cite{drachen2014skill}, principalmente para equipes inexperientes que não sabem inicialmente como elaborar ou melhorar sua estratégia. Nesse sentido, uma alternativa que poderia ajudar essas equipes é fornecer informações que levem a melhores decisões estratégicas no jogo. Um exemplo dessas informações poderia ser métricas de desempenho baseadas no comportamento de equipes bem-sucedidas. Com isso, as equipes poderiam monitorar seus desempenhos ao longo das partidas e verificar se estão no caminho correto ou não. Uma das abordagens para o criação de métricas de desempenho é o uso da mineração de dados \cite{el2016game}, que permite o estudo da coleta, preparação, processamento, análise e obtenção de informações úteis a partir de dados para apoiar a tomada de decisões \cite{aggarwal2015data}.
 
-Uma das abordagens para a aplicação da mineração de dados é a utilização do aprendizado de máquina \cite{aggarwal2015data}, uma subárea da inteligência artificial que explora o estudo e construção de algoritmos que permitem ao computador aprender utilizando dados. Os algoritmos de aprendizado de máquina fazem uso do princípio de inferência chamado indução, com o qual é possível obter conclusões genéricas a partir de um conjunto de observações fornecido \cite{lorena2007introduccao}. Esse aprendizado indutivo pode ser dividido em dois tipos principais: supervisionado e não supervisionado. No aprendizado supervisionado uma máquina é treinada com base em um conjunto de dados onde os rótulos das observações são previamente conhecidos para realizar tarefas de previsão, classificação e regressão, já no aprendizado não supervisionado não existem observações rotuladas para que a máquina possa aprender sobre o domínio do problema, e seu objetivo é descobrir padrões ou características nos dados \cite{sathya2013comparison} por meio de métodos de agrupamento, associação, estimação de densidade, dentre outros.
+Uma das abordagens para a aplicação da mineração de dados é a utilização do aprendizado de máquina \cite{aggarwal2015data}, uma subárea da IA que explora o estudo e construção de algoritmos que permitem ao computador aprender utilizando dados. Os algoritmos de aprendizado de máquina fazem uso do princípio de inferência chamado indução, com o qual é possível obter conclusões genéricas a partir de um conjunto de dados fornecido \cite{lorena2007introduccao}. Esse aprendizado indutivo pode ser dividido em dois tipos principais: supervisionado e não supervisionado. No aprendizado supervisionado uma máquina é treinada com base em um conjunto de dados onde os rótulos das observações são previamente conhecidos para realizar tarefas de previsão, classificação e regressão, já no aprendizado não supervisionado não existem observações rotuladas para que a máquina possa aprender sobre o domínio do problema, e seu objetivo é descobrir padrões ou características nos dados \cite{sathya2013comparison} por meio de métodos de agrupamento, associação, estimação de densidade, dentre outros.
 
-No contexto de análise de comportamento de jogadores, onde tipicamente não se tem certeza como o comportamento pode variar, os algoritmos de aprendizado de máquina fornecem meios para descobrir as principais características nos dados e padrões relacionados ao comportamento em função dessas características \cite{el2016game}. Esses padrões podem ser utilizados para caracterizar os perfis das equipes, ou seja, equipes que possuem comportamento similar, bem como classificar o perfil de uma equipe.
+No contexto de análise de comportamento de jogadores, onde tipicamente não se tem certeza de como o comportamento pode variar, os algoritmos de aprendizado de máquina fornecem meios para descobrir as principais características nos dados e padrões relacionados ao comportamento em função dessas características \cite{el2016game}. Esses padrões podem ser utilizados para caracterizar os perfis das equipes, ou seja, equipes que possuem comportamento similar, bem como classificar o perfil de uma equipe.
 
 \section{Objetivos}
-Esta dissertação tem como objetivo apresentar e discutir os resultados de um processo de mineração de dados para identificar e caracterizar perfis de comportamento de equipes bem-sucedidas e malsucedidas no contexto do jogo League of Legends, baseando-se em métricas sumarizadas de desempenho dos jogadores nas partidas. Para atingir o objetivo, primeiro, coletamos partidas do \textit{site} oficial de histórico de partidas de LoL. Em seguida, modelamos um conjunto de dados de desempenho de equipes extraindo características a partir de estatísticas básicas de desempenho individual dos jogadores nas partidas, como quantidade de ouro ganho, quantidade de monstros abatidos, dano físico total recebido, dentre outros. Depois, para transformar os dados em métricas úteis de desempenho, realizamos outras tarefas relacionadas a preparação de dados, tais como limpeza de dados, remoção de características com baixa variância, detecção de \textit{outliers}, transformação de dados, normalização de dados e análise de redundância de características. Para descobrir padrões de comportamento, aplicamos uma análise de agrupamento (\textit{K-means clustering}) nos dados desempenho de equipes para descobrir um número ótimo de grupos e, assim, agrupar equipes similares. Finalmente, caracterizamos cada grupo por meio de análise exploratória de dados e análise de relevância. Os resultados implicam que alguns grupos de equipes são mais propensos a ganhar do que outros e a influência das características é distinta para cada um, o que nos permitiu definir perfis de equipes bem-sucedidas e malsucedidas baseando-se nas métricas de desempenho das equipes.
+Esta dissertação tem como objetivo apresentar e discutir os resultados de um processo de mineração de dados para identificar e caracterizar perfis de comportamento de equipes bem-sucedidas e malsucedidas no contexto do jogo League of Legends, baseando-se nas métricas sumarizadas de desempenho dos jogadores nas partidas. Para atingir o objetivo, primeiro, coletamos partidas do \textit{site} oficial de histórico de partidas de LoL. Em seguida, modelamos um conjunto de dados de desempenho de equipes extraindo características a partir de estatísticas básicas de desempenho individual dos jogadores nas partidas, como quantidade de ouro ganho, quantidade de monstros abatidos, dano físico total recebido, dentre outros. Depois, para transformar os dados em métricas úteis de desempenho, realizamos outras tarefas relacionadas a preparação de dados, tais como limpeza de dados, remoção de características com baixa variância, detecção de \textit{outliers}, transformação de dados, normalização de dados e análise de redundância de características. Para descobrir padrões de comportamento, aplicamos uma análise de agrupamento (\textit{K-means clustering}) nos dados desempenho de equipes para descobrir um número ótimo de grupos e, assim, agrupar equipes similares. Finalmente, caracterizamos cada grupo por meio de uma análise exploratória dos dados. Os resultados implicam que alguns grupos de equipes são mais propensos a terem equipes vencedoras do que outros e a influência das características é distinta para cada um, o que nos permitiu definir perfis de equipes bem-sucedidas e malsucedidas baseando-se nas métricas de desempenho das equipes.
 
 \subsection{Questões de Pesquisa}
 
@@ -26,18 +26,18 @@ Esta dissertação tem como objetivo apresentar e discutir os resultados de um p
 \end{enumerate}
 
 \section{Contribuições}
-Acredita-se que este trabalho resultou em uma importante contribuição ao unir o tema comportamento de usuários aos jogos MOBA. Esses jogos possuem uma crescente popularidade e uma série de aspectos a serem estudados. Até onde sabemos, ainda existe uma escassez de trabalhos acadêmicos que os exploram \cite{drachen2014skill} \cite{ong2015player}, especialmente em relação ao comportamento de jogadores e equipes em LoL.
+Acreditamos que este trabalho resultou em uma importante contribuição ao unir o tema comportamento de usuários aos jogos MOBA. Esses jogos possuem uma crescente popularidade e uma série de aspectos a serem estudados. Até onde sabemos, ainda existe uma escassez de trabalhos acadêmicos que os exploram \cite{drachen2014skill} \cite{ong2015player}, especialmente em relação ao comportamento de jogadores e equipes em LoL.
 
-Podemos identificar ao menos três classes principais de \textit{stackholders} para as quais os resultados desta pesquisa são relevantes. Primeiro, a comunidade de mineração de dados, pois este trabalho representa um domínio novo e ainda pouco explorado. Em segundo lugar, a indústria de jogos digitais que pode se beneficiar dos modelos descritivos e preditivos desenvolvidos para compreender melhor os jogadores e as equipes e, assim, fornecer ferramentas automáticas para melhorar a experiência de jogo. Finalmente, jogadores e equipes inexperientes que podem se beneficiar das informações obtidas a partir de perfis de equipes bem-sucessidadas para apoiar suas decisões e, assim, melhorar suas habilidades, tornando o jogo ainda mais divertido.
+Podemos identificar ao menos três classes principais de \textit{stackholders} para as quais os resultados desta pesquisa são relevantes. Primeiro, a comunidade de mineração de dados, pois este trabalho representa um domínio novo e ainda pouco explorado. Em segundo lugar, a indústria de jogos digitais que pode se beneficiar dos modelos descritivos e preditivos desenvolvidos para compreender melhor os jogadores e as equipes e, assim, fornecer ferramentas automáticas para melhorar a experiência de jogo. Finalmente, jogadores e equipes inexperientes que podem se beneficiar das informações obtidas a partir dos perfis de equipes bem-sucessidadas e malsucedidas para apoiar suas decisões e, assim, melhorar suas habilidades, tornando o jogo ainda mais divertido.
 
 Por fim, este trabalho também resultou na aceitação do artigo científico "\textit{Profiling Successful Team Behaviors in League of Legends}" no XXIII Simpósio Brasileiro de Sistemas Multimídia e Web (WebMedia 2017). Nesse artigo, foram abordados os temas e experimentos aqui tratados, sendo este trabalho uma extensão mais aprofundada do artigo.
 
 \section{Estrutura da Dissertação}
-Esta dissertação encontra-se dividida em 7 capítulos. O Capítulo 2 apresenta uma introdução e histórico sobre os MOBAs e uma fundamentação sobre mineração de dados. O Capítulo 3 apresenta os trabalhos relacionados, abordando os temas necessários ao desenvolvimento deste trabalho e a literatura sobre MOBA e aprendizado de máquina disponível. O Capítulo 4 apresenta os resultados da metodologia adotada para preparar os dados de desempenho das equipes que foram analisados. O Capítulo 5 apresenta os resultados do método de agrupamento de dados que foi usado para encontrar padrões. O Capítulo 6 apresenta a caracterização de perfis conforme os grupos ou padrões encontrados. O Capítulo 7 finaliza este trabalho com as conclusões e trabalhos futuros.
+Esta dissertação encontra-se dividida em 7 capítulos. O Capítulo 2 apresenta uma introdução sobre o histórico dos MOBAs e uma fundamentação teórica sobre mineração de dados. O Capítulo 3 apresenta os trabalhos relacionados, abordando os temas necessários ao desenvolvimento deste trabalho sobre MOBAs e aprendizado de máquina de uma maneira geral. O Capítulo 4 apresenta os resultados da metodologia adotada para preparar os dados de desempenho das equipes que foram usados nas análises. O Capítulo 5 apresenta os resultados da análise de agrupamento que foi usado para encontrar padrões ou grupos nos dados. O Capítulo 6 apresenta a caracterização de perfis conforme os grupos ou padrões encontrados. O Capítulo 7 finaliza este trabalho com as conclusões e trabalhos futuros.
 
 \chapter{Fundamentação Teórica}
 
-Este capítulo aborda o histórico dos MOBAs e os principais conceitos relacionados a mineração de dados e jogos digitais.
+Este capítulo aborda o histórico dos MOBAs e os principais conceitos relacionados a mineração de dados no contexto de jogos digitais.
 
 \section{MOBA}
 Os jogos MOBA tem suas origens nos jogos do gênero RTS, muito populares em meados dos anos 90 e início dos anos 2000. Suas características herdam traços que estão presentes em ambos os gêneros, sendo que os primeiros MOBAs foram criados utilizando as próprias ferramentas de criação de mapas personalizados RTS disponibilizados pelas desenvolvedoras. Para que se possa entender melhor as origens e características dos jogos MOBA, apresenta-se nesta seção um breve histórico de evolução do gênero.
@@ -127,7 +127,7 @@ O CRISP-DM consiste em seis fases destinadas a um processo cíclico (Figura ~\re
 \textbf{Modelagem}: Após a preparação dos dados, métodos de mineração de dados (associação, agrupamento, classificação e detecção de \textit{outliers}) podem ser selecionados e aplicados. Métodos diferentes podem ser usados para o mesmo problema. Se o método resultar em um modelo, as configurações do modelo podem ser calibradas para otimizar os resultados. Esse processo pode ser repetido com novas seleções e transformações de dados, refinando gradualmente o resultado ou integrando novas fontes de dados relevantes para obter resultados diferentes, mais apropriados e valiosos.
 
   \item
-\textbf{Avaliação}: Os resultados ou modelos devem ser avaliados conforme os objetivos de negócios definidos na fase de compreensão do negócio. Isso pode levar à identificação de outras necessidades, frequentemente retornando às fases anteriores. A obtenção de entendimento do negócio é um procedimento iterativo na mineração de dados, onde os resultados de várias ferramentas de visualização, estatística e inteligência artificial mostram os novos relacionamentos que proporcionam uma compreensão mais profunda das operações organizacionais.
+\textbf{Avaliação}: Os resultados ou modelos devem ser avaliados conforme os objetivos de negócios definidos na fase de compreensão do negócio. Isso pode levar à identificação de outras necessidades, frequentemente retornando às fases anteriores. A obtenção de entendimento do negócio é um procedimento iterativo na mineração de dados, onde os resultados de várias ferramentas de visualização, estatística e IA mostram os novos relacionamentos que proporcionam uma compreensão mais profunda das operações organizacionais.
   \item
 \textbf{Implantação}: A mineração de dados pode ser usada para validar hipóteses anteriormente realizadas ou para descoberta de conhecimento, como identificação de relacionamentos inesperados e úteis. Por meio do conhecimento encontrado nas fases anteriores do processo, os resultados ou modelos obtidos podem então serem apresentados aos \textit{stakeholders} e, então, aplicados para vários propósitos. As apresentações devem ser realizadas de forma a ajudar o \textit{stakeholder} alvo a entender, interpretar e agir sobre os resultados da mineração de dados, isso pode ser feito usando uma representação do conhecimento, como uma visualização ou relatório. Por exemplo, um analista de dados telemétricos de jogos poderia desenvolver uma visualização de \textit{heatmap} a partir dos registros de localização dos jogadores em um mapa de um jogo para apresentar ao líder de \textit{designer} do jogo, que por sua vez, poderia ter algum \textit{insight} inovador em relação ao mapa. Os resultados ou modelos precisam ser monitorados quanto as mudanças nas condições operacionais, porque o que pode ser verdade hoje pode não ser verdade no ano a partir desse instante. Se ocorrerem alterações significativas, o processo deve ser refeito. Também é aconselhável registrar os resultados dos projetos de mineração de dados, de modo que as evidências documentadas estejam disponíveis para estudos futuros.
 
@@ -241,7 +241,7 @@ A Riot Games, desenvolvedora do LoL, fornece uma Interface de Programação de A
 
 \begin{table}
   \scriptsize
-  \caption{Descrições das estatísticas básicas de desempenho dos jogadores nas partidas.}
+  \caption{Descrições das estatísticas básicas de desempenho dos jogadores em partidas.}
   \label{tab:features-desc}
   \begin{tabular}{p{0.30\textwidth}p{0.65\textwidth}}
     \toprule
