--- a/resumo.tex
+++ b/resumo.tex
@@ -1,3 +1,3 @@
-Apesar da crescente popularidade dos esportes eletrônicos (eSports), ainda há uma escassez de trabalhos acadêmicos que exploram o comportamento de jogo das equipes. Compreender as características que ajudam discriminar entre equipes bem-sucedidas e malsucedidas poderia ajudar as equipes a melhorar suas estratégias, como determinar métricas de desempenho a serem alcançadas. Nesta dissertação, identificamos e caracterizamos padrões de comportamento de equipes com base nos dados de histórico de partidas de League of Legends, um eSport muito popular. Ao aplicar métodos de mineração de dados, como aprendizado da máquina e análise estatística, agrupamos o desempenho das equipes e investigamos para cada grupo como e em que medida essas características influenciam o sucesso e fracasso das equipes. Os resultados do nosso estudo implicam que alguns grupos são mais propensos a ganhar do que outros e a influência das características é distinta para cada um, o que nos permitiu modelar métricas de desempenho de perfis de equipe bem-sucedidas e malsucedidas. Encontramos ao todo 7 grupos ou perfis, que foram classificados em quatro níveis em termos de taxa de equipes vencedoras: muito baixo, moderado, alto e muito alto.
+Apesar da crescente popularidade dos esportes eletrônicos (eSports), ainda há uma escassez de trabalhos acadêmicos que exploram o comportamento de jogo das equipes. Compreender as características que ajudam discriminar entre equipes bem-sucedidas e malsucedidas poderia ajudar as equipes a melhorar suas estratégias, como determinar métricas de desempenho a serem alcançadas. Nesta dissertação, identificamos e caracterizamos padrões de comportamento de equipes com base nos dados de histórico de partidas de League of Legends, um \textit{eSport} muito popular. Ao aplicar métodos de mineração de dados, como aprendizado da máquina e análise estatística, agrupamos o desempenho das equipes e investigamos para cada grupo como e em que medida essas características influenciam o sucesso e fracasso das equipes. Os resultados do nosso estudo implicam que alguns grupos são mais propensos a ganhar do que outros e a influência das características é distinta para cada um, o que nos permitiu modelar métricas de desempenho de perfis de equipe bem-sucedidas e malsucedidas. Encontramos ao todo 7 grupos ou perfis, que foram classificados em quatro níveis em termos de taxa de equipes vencedoras: muito baixo, moderado, alto e muito alto.
 
 \textbf{Palavras-chave}: Mineração de Dados, Agrupamento, Análise de Jogos, Jogos \textit{Online}, Jogos MOBA, Desempenho da Equipes
